# nous

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.esp32c3
.github/: copilot-instructions.md
docs/: font-generator.css  font-generator.html  font-generator.js  font_gen.js  font_gen.wasm  font_gen_worker.js  index.css  index.html  index.js  test_index_web.md  theme.css  theme.js
lib/microreader/: Application.cpp  Application.h  version.h
lib/microreader/content/: Book.h  BookIndex.cpp  BookIndex.h  ContentModel.h  EpubParser.cpp  EpubParser.h  JpegDecoder.cpp  PngDecoder.cpp  StringPool.h  TextLayout.cpp  ZipReader.cpp
lib/microreader/content/mrb/: MrbConverter.cpp  MrbWriter.cpp  MrbWriter.h
lib/microreader/display/: DrawBuffer.h  ui_font_header.h  ui_font_medium.h
lib/microreader/screens/: ChapterSelectScreen.cpp  ChapterSelectScreen.h  HiddenBooksMenu.cpp  HiddenBooksMenu.h  ListMenuScreen.cpp  ListMenuScreen.h  MainMenu.cpp  MainMenu.h  ReaderOptionsScreen.cpp  ReaderOptionsScreen.h  ReaderScreen.cpp  ReaderScreen.h  SettingsScreen.cpp  SettingsScreen.h
lib/nous/: Application.cpp  Application.h  Loop.h  ReadingActivityTracker.h  Runtime.h  ScreenManager.h  version.h
lib/nous/content/: BmpSleepConverter.cpp  BmpSleepConverter.h  Book.cpp  Book.h  BookIndex.cpp  BookIndex.h  ContentModel.h  CssParser.h  EpubParser.cpp  EpubParser.h  HtmlEntities.cpp  HtmlEntities.h  ImageDecoder.cpp  ImageDecoder.h  StringPool.h  TextLayout.h  XmlReader.cpp  ZipReader.cpp  ZipReader.h
lib/nous/content/hyphenation/: Hyphenation.h
lib/nous/content/hyphenation/Liang/: hyph-de.trie.h  hyph-en.trie.h  hyph-es.trie.h  hyph-fr.trie.h  hyph-it.trie.h  hyph-nl.trie.h  hyph-pl.trie.h  hyph-pt.trie.h  hyph-ru.trie.h  liang_hyphenation_patterns.h
lib/nous/content/mrb/: MrbConverter.cpp  MrbFormat.h  MrbReader.cpp  MrbWriter.cpp
lib/nous/display/: DrawBuffer.h  brand_font_nous.h  ui_font_header.h  ui_font_large.h  ui_font_medium.h  ui_font_small.h
lib/nous/screens/: ChapterSelectScreen.cpp  ChapterSelectScreen.h  ConvertAllScreen.cpp  ConvertAllScreen.h  GlobalStatsScreen.cpp  GlobalStatsScreen.h  HiddenBooksMenu.cpp  IScreen.h  LinksScreen.h  ListMenuScreen.cpp  ListMenuScreen.h  LyraExtScreen.cpp  LyraExtScreen.h  LyraScreen.cpp  LyraScreen.h  MainMenu.cpp  MainMenu.h  ReaderOptionsScreen.cpp  ReaderOptionsScreen.h  ReaderScreen.cpp  ReaderScreen.h  RecentBooksScreen.cpp  RecentBooksScreen.h  SettingsScreen.cpp  SettingsScreen.h  StatsScreen.cpp  StatsScreen.h  WhatsNewScreen.cpp  WhatsNewScreen.h
lib/nous/screens/demo/: BouncingBallDemo.cpp  BouncingBallDemo.h  GrayscaleDemo.cpp  GrayscaleDemo.h
nous/lib/microreader/screens/: ListMenuScreen.cpp  ListMenuScreen.h  MainMenu.cpp  MainMenu.h  ReaderOptionsScreen.cpp  ReaderOptionsScreen.h  ReaderScreen.cpp  SettingsScreen.cpp  SettingsScreen.h
resources/fonts/: Literata.mfb  nous.mfb
resources/fonts/inter/: inter14.mfb  inter18.mfb  inter24.mfb  inter32.mfb
resources/sleep/: sleep_0.mgr
sd/fonts/: NotoSansJP.mfb  alegreya.mfb  bookerly.mfb
test/: CMakeLists.txt
test/fixtures/: generate_jp_test_epub.py  generate_regression_epub.py  japanese_font_test.epub  regression_test.epub
test/integration/: HtmlExportTest.cpp  RealBookTest.cpp
test/support/: FontLoader.h
test/unit/: BmpSleepConverterTest.cpp  BookIndexStatsEpochTest.cpp  BookIndexTest.cpp  EpubParserTest.cpp  MrbFormatTest.cpp  NavigationTest.cpp  ReadingActivityTrackerTest.cpp
tools/: build_assets.py  generate_font.py  serial_cmd.py  test_index.py
tools/calibre-plugin/: __init__.py  build.py
tools/font_gen/: CMakeLists.txt  build_wasm.sh  build_wasm_docker.ps1  font_gen.c
